src/test/deca/context/valid/convFloat-simpleAffectationsAndDeclarations.deca
{
   float a = 2;
   int i = 3;
   float b = i;
   int j;
   float c = j;
}