src/test/deca/context/invalid/affectation-undefinedVariable.deca
{
	float i = 5.3;
    i = desPommesdeTerre;
}